# airpods-tui

./: .gitignore  Cargo.toml  PKGBUILD  README.md  airpods-tui.install  airpods-tui.service
.github/workflows/: release.yml
packaging/airpods-tui-bin/: .SRCINFO  PKGBUILD
src/: config.rs  handoff.rs  ipc.rs  main.rs  media_controller.rs  utils.rs
src/bluetooth/: aacp.rs  att.rs  discovery.rs  le.rs  managers.rs  mod.rs
src/devices/: airpods.rs  apple_models.rs  enums.rs  mod.rs  nothing.rs
src/tui/: app.rs  events.rs  ui.rs
