[package]
name = "airpods-tui"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
bluer = { version = "0.17.4", features = ["full"] }
env_logger = { version = "0.11.8", features = ["auto-color"] }
uuid = "1.18.1"
log = "0.4.28"
dbus = "0.9.9"
hex = "0.4.3"
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.8.4"
futures = "0.3.31"
libpulse-binding = "2.30.1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 8
panic = "abort"
strip = true
